# rust-expr-serial-port-stmf32-discovery

./: Cargo.toml  openocd.gdb
auxiliary/: Cargo.toml
auxiliary/src/: lib.rs
src/: main.rs
