[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Wink Saville <wink@saville.com",
]
edition = "2018"
name = "aux"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
stm32f3-discovery = "0.6.0"
panic-halt = "0.2.0"
panic-itm = "0.4.2"

[dependencies.stm32f3xx-hal]
version = "0.6.1"
features=["stm32f303xc",]
